# Advent-of-Code-2023

./: .gitignore  Taskfile.yml
.github/workflows/: CI.yml
1/: Cargo.toml  Taskfile.yml
1/src/: main.rs
10/: Taskfile.yml  go.mod
10/cmd/solve/: main.go
10/pkg/maze/: maze.go  maze_test.go
11/: Taskfile.yml  go.mod
11/cmd/solve/: main.go
11/pkg/galaxies/: galaxies.go  galaxies_test.go
12/: Taskfile.yml  go.mod
12/cmd/solve/: main.go
12/pkg/spring/: spring.go  spring_test.go
13/: Taskfile.yml  pom.xml
13/src/main/java/adventofcode/day13/: Main1.java  Main2.java  Solver.java
13/src/test/java/adventofcode/day13/: SolverTests.java
14/: Taskfile.yml
14/src/main/java/adventofcode/day14/: Main1.java  Main2.java  Solver.java
14/src/test/java/adventofcode/day14/: SolverTests.java
15/: Taskfile.yml
15/src/main/java/adventofcode/day15/: Main1.java  Main2.java  Solver.java
15/src/test/java/adventofcode/day14/: SolverTests.java
16/: Taskfile.yml  pom.xml
16/src/main/java/adventofcode/day16/: Main1.java  Main2.java  Solver.java
16/src/test/java/adventofcode/day16/: SolverTests.java
17/: Taskfile.yml
17/src/main/java/adventofcode/day17/: Main1.java  Main2.java  MappedNode.java  Solver.java
17/src/test/java/adventofcode/day17/: SolverTests.java
18/: Taskfile.yml  day18.cabal
18/app/: Main.hs
18/src/: Solve.hs
18/test/: SolveTest.hs
19/: CHANGELOG.md  Taskfile.yml  day19.cabal
19/app/: Main.hs
19/src/: Solve.hs
19/test/: SolveTest.hs
2/: Cargo.toml  Taskfile.yml
2/src/: main.rs
21/: Taskfile.yml  pyproject.toml
21/solve/: solve.py
23/: Taskfile.yml  pyproject.toml  temp
23/solve/: solve.py
24/: pyproject.toml
24/solve/: solve.py
25/: Taskfile.yml  pyproject.toml
25/solve/: solve.py
25/tests/: test_solve.py
3/: Cargo.toml  Taskfile.yml
3/src/: main.rs
4/: Cargo.toml  Taskfile.yml
4/src/: main.rs
5/: Cargo.toml  Taskfile.yml
5/src/: main.rs
6/: Taskfile.yml  go.mod
6/cmd/solve/: main.go
6/pkg/boat/: boat.go  boat_test.go
7/: Taskfile.yml  go.mod
7/cmd/solve/: main.go
7/pkg/poker/: poker.go  poker_test.go
8/: Taskfile.yml  go.mod
8/cmd/solve/: main.go
8/pkg/maps/: maps.go  maps_test.go
9/: Taskfile.yml  day9.cabal
9/app/: Main.hs
9/src/: Solve.hs
9/test/: SolveTest.hs
beta-1/: Cargo.toml  Taskfile.yml
beta-1/src/: main.rs
beta-2/: Taskfile.yml  go.mod
beta-2/cmd/solve/: main.go
beta-2/cmd/solve2/: main.go
beta-2/pkg/rps/: rps.go  rps_test.go
beta-2/pkg/rps2/: rps.go  rps_test.go
beta-3/: Taskfile.yml  pom.xml
beta-3/src/main/java/adventofcode/beta3/: Main.java  Main1.java  Main2.java  Solver.java
beta-3/src/test/java/adventofcode/beta3/: SolverTests.java
beta-4/: Taskfile.yml  beta4.cabal
beta-4/app/: Main.hs
beta-4/src/: Solve.hs
beta-4/test/: SolveTest.hs
beta-5/: Taskfile.yml  package.json  tsconfig.json
beta-5/src/: index.ts  solve.test.ts  solve.ts
beta-6/: Taskfile.yml  pyproject.toml
beta-6/solve/: solve.py
beta-6/tests/: test_solve.py
