cabal-version:      2.4
name:               day9
version:            0.1.0.0

author:             Jason Tan
maintainer:         j.tan@obscuritylabs.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Solve

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day9
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, day9
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite day9-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          SolveTest.hs
    build-depends:    base ^>=4.17.2.0, day9,
                      HUnit, test-framework, test-framework-hunit
