[tool.poetry]
name = "beta-6"
version = "0.1.0"
description = ""
authors = ["Jason Tan <j.tan@obscuritylabs.com>"]
readme = "README.md"
packages = [{include = "beta_6"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
